--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,12 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        contact_address: '12 rue du Village'
+        contact_city: 'Ville'
+        contact_email: 'prenom.nom@domaine.fr'
+        contact_phone: '01.23.45.67.89'
+        contact_zip: '12345'
+        copyright: 'Copyright © 2021 - David HURTREL'
 
 when@test:
     twig:
